Use typographical double quotes

--- a/source/manuals/licensing.html.md.erb
+++ b/source/manuals/licensing.html.md.erb
@@ -19,9 +19,9 @@ From [The Guardian and Observer style guide][guardian-style]:
 Some examples of this:
 
 * Use the British English spelling of the noun _licence_, not the US English
-  spelling of _license_ (for example "you need a licence to drive a car.")
+  spelling of _license_ (for example “you need a licence to drive a car.”)
 * When talking about the permissions that a licence grants, or the act of using
-  a licence, use _license_ (for example "your pet shop needs to be licensed.")
+  a licence, use _license_ (for example “your pet shop needs to be licensed.”)
 * When using a proper name, use the appropriate spelling for that thing (e.g.
   the [MIT License][mit-license].)
 
@@ -47,12 +47,12 @@ README under a ‘Licence’ heading.
 
 At MHCLG we use the [MIT License][mit-license].
 
-Make sure the licence content is included in full, including the title "The MIT
-License", so that readers are quickly able to see what licence is being used.
+Make sure the licence content is included in full, including the title “The MIT
+License”, so that readers are quickly able to see what licence is being used.
 
 ### Copyright notice
 
-The Copyright is Crown Copyright; you can put "Ministry of Housing, Communities & Local Government" in
+The Copyright is Crown Copyright; you can put “Ministry of Housing, Communities & Local Government” in
 brackets.
 
 For example, `Copyright (c) <%= Time.current.year %> Crown Copyright (Ministry of Housing, Communities & Local Government)`.
