--- a/source/standards/performance-testing.html.md.erb
+++ b/source/standards/performance-testing.html.md.erb
@@ -123,7 +123,7 @@ Some testing frameworks support the execution of different kinds of testing stra
 
 - Smoke tests (To test a journey from start to finish)
 - Soak tests (To test whether your application can handle a sustained load)
-- Spike tests (To test whether your application can handle an unexpected surge or "spike" in load)
+- Spike tests (To test whether your application can handle an unexpected surge or “spike” in load)
 - Stress tests (To find breaking points or bottlenecks in your application or infrastructure)
 
 Some testing frameworks may also allow you to simulate different patterns and stepping of traffic, such as choosing between a constant or ramping (exponential) arrival rate.
