--- a/source/standards/pull-requests.html.md.erb
+++ b/source/standards/pull-requests.html.md.erb
@@ -68,7 +68,7 @@ State explicitly if there are blocking issues.
 
 #### Communicate with others who may consider reviewing the PR
 
-Comment in the PR when discussions about the change are happening "offline" (outside the PR itself). Summarise any "offline" conversations as a comment in the PR for the benefit of others.
+Comment in the PR when discussions about the change are happening “offline” (outside the PR itself). Summarise any "offline" conversations as a comment in the PR for the benefit of others.
 
 Comment in the PR if you have not finished reviewing the change. You might want to directly inform the PR raiser if they are expecting you to finish your review by a specific point.
 
