--- a/source/standards/threat-modelling.html.md.erb
+++ b/source/standards/threat-modelling.html.md.erb
@@ -175,9 +175,9 @@ vulnerabilities. If you’re finding it hard coming up with potential
 attacks, you can use STRIDE to help stimulate ideas.
 
 Note that STRIDE is *not* useful as a taxonomy.  Some attacks don’t
-neatly fit into "spoofing" versus "tampering" versus "elevation of
-privilege".  That doesn’t matter: the important thing is to come up
-with threats and write them down, not to ensure they are "correctly"
+neatly fit into “spoofing” versus “tampering” versus “elevation of
+privilege”.  That doesn’t matter: the important thing is to come up
+with threats and write them down, not to ensure they are “correctly”
 categorised.
 
 
