Try generating URLs for SRE sections

--- a/source/partials/_nav-sre.html.erb
+++ b/source/partials/_nav-sre.html.erb
@@ -1,4 +1,4 @@
 <ul>
-  <li><a href="/standards/sre/slo.html">Make data-driven decisions with Service Level Objectives (SLOs)</a></li>
-  <li><a href="/standards/sre/slis.html">Run a Service Level Indicator (SLI) workshop</a></li>
+  <li><%= link_to 'Make data-driven decisions with Service Level Objectives (SLOs)', '/standards/sre/slo.html' %></li>
+  <li><%= link_to 'Run a Service Level Indicator (SLI) workshop', '/standards/sre/slis.html' %></li>
 </ul>
