Fix remaining links

--- a/source/partials/_nav-hosting-infrastructure.html.erb
+++ b/source/partials/_nav-hosting-infrastructure.html.erb
@@ -1,10 +1,11 @@
 <ul>
-  <li><a href="/standards/hosting.html">How to host a service</a></li>
-  <li><a href="/standards/dns-hosting.html">How to manage DNS records for your service</a></li>
-  <li><a href="/standards/configuration-management.html">Use configuration management</a></li>
-  <li><a href="/standards/web-application-firewall.html">Use a web application firewall (WAF)</a></li>
-  <li><a href="/manuals/security-overview-for-websites.html">Security overview for websites</a></li>
-  <li><a href="/standards/cloud-tagging.html">Tagging cloud resources</a></li>
-  <li><a href="/manuals/working-with-aws-accounts.html">Working with AWS accounts</a></li>
-  <li><a href="/standards/working-with-azure-accounts.html">Working with Azure accounts</a></li>
+  <li><%= link_to 'How to host a service', '/standards/hosting.html' %></li>
+  <li><%= link_to 'How to host a service', '/standards/hosting.html' %></li>
+  <li><%= link_to 'How to manage DNS records for your service', '/standards/dns-hosting.html' %></li>
+  <li><%= link_to 'Use configuration management', '/standards/configuration-management.html' %></li>
+  <li><%= link_to 'Use a web application firewall (WAF)', '/standards/web-application-firewall.html' %></li>
+  <li><%= link_to 'Security overview for websites', '/manuals/security-overview-for-websites.html' %></li>
+  <li><%= link_to 'Tagging cloud resources', '/standards/cloud-tagging.html' %></li>
+  <li><%= link_to 'Working with AWS accounts', '/manuals/working-with-aws-accounts.html' %></li>
+  <li><%= link_to 'Working with Azure accounts', '/standards/working-with-azure-accounts.html' %></li>
 </ul>
