--- a/source/partials/_nav-logging-monitoring-alerting.html.erb
+++ b/source/partials/_nav-logging-monitoring-alerting.html.erb
@@ -1,7 +1,7 @@
 <ul>
-  <li><a href="/standards/logging.html">Store and query logs</a></li>
-  <li><a href="/standards/monitoring.html">How to monitor your service</a></li>
-  <li><a href="/standards/alerting.html">How to manage alerts</a></li>
+  <li><%= link_to 'Store and query logs', '/standards/logging.html' %></li>
+  <li><%= link_to 'How to monitor your service', '/standards/monitoring.html' %></li>
+  <li><%= link_to 'How to manage alerts', '/standards/alerting.html' %></li>
   <li>
     <a href="/standards/sre/overview.html">Following the Google SRE playbook</a>
     <%= partial '/partials/_nav-sre' %>
