--- a/source/partials/_nav-operating-a-service.html.erb
+++ b/source/partials/_nav-operating-a-service.html.erb
@@ -1,16 +1,16 @@
 <ul>
-  <li><a href="/standards/understanding-risks.html">Understand the risks to your service</a></li>
-  <li><a href="/standards/technical-debt.html">How to track technical debt</a></li>
-  <li><a href="/standards/accounts-with-third-parties.html">How to manage access to your third-party service accounts</a></li>
-  <li><a href="/standards/storing-credentials.html">How to store credentials</a></li>
-  <li><a href="/standards/how-to-do-penetration-tests.html">How to do penetration testing</a></li>
-  <li><a href="/standards/performance-testing.html">Performance testing</a></li>
-  <li><a href="/standards/sending-email.html">How to send email notifications to users</a></li>
-  <li><a href="/standards/user-support.html">How MHCLG provides user support</a></li>
-  <li><a href="/standards/incident-management.html">Incident management</a></li>
-  <li><a href="/standards/disaster-recovery.html">Disaster Recovery</a></li>
-  <li><a href="/standards/principle-least-access.html">Principle of least privilege</a></li>
-  <li><a href="/standards/secrets-auditing.html">Secret auditing</a></li>
-  <li><a href="/standards/pre-commit-hooks.html">Git pre-commit</a></li>
-  <li><a href="/standards/vulnerability-disclosure.html">Vulnerability disclosure and security.txt</a></li>
+  <li><%= link_to 'Understand the risks to your service', '/standards/understanding-risks.html' %></li>
+  <li><%= link_to 'How to track technical debt', '/standards/technical-debt.html' %></li>
+  <li><%= link_to 'How to manage access to your third-party service accounts', '/standards/accounts-with-third-parties.html' %></li>
+  <li><%= link_to 'How to store credentials', '/standards/storing-credentials.html' %></li>
+  <li><%= link_to 'How to do penetration testing', '/standards/how-to-do-penetration-tests.html' %></li>
+  <li><%= link_to 'Performance testing', '/standards/performance-testing.html' %></li>
+  <li><%= link_to 'How to send email notifications to users', '/standards/sending-email.html' %></li>
+  <li><%= link_to 'How MHCLG provides user support', '/standards/user-support.html' %></li>
+  <li><%= link_to 'Incident management', '/standards/incident-management.html' %></li>
+  <li><%= link_to 'Disaster Recovery', '/standards/disaster-recovery.html' %></li>
+  <li><%= link_to 'Principle of least privilege', '/standards/principle-least-access.html' %></li>
+  <li><%= link_to 'Secret auditing', '/standards/secrets-auditing.html' %></li>
+  <li><%= link_to 'Git pre-commit', '/standards/pre-commit-hooks.html' %></li>
+  <li><%= link_to 'Vulnerability disclosure and security.txt', '/standards/vulnerability-disclosure.html' %></li>
 </ul>
