--- a/source/partials/_nav-software-development.html.erb
+++ b/source/partials/_nav-software-development.html.erb
@@ -1,12 +1,12 @@
 <ul>
-  <li><a href="/standards/naming-software-products.html">How to name software products</a></li>
-  <li><a href="/standards/programming-languages.html">Choosing a programming language</a></li>
-  <li><a href="/manuals/style-guides.html">Style guides</a></li>
-  <li><a href="/standards/tracking-dependencies.html">How to manage third party software dependencies</a></li>
-  <li><a href="/manuals/accessibility.html">Building accessible services</a></li>
-  <li><a href="/standards/pair-programming.html">Pair programming</a></li>
-  <li><a href="/manuals/browser-support.html">Supporting different browsers</a></li>
-  <li><a href="/standards/optimise-frontend-perf.html">How to optimise frontend performance</a></li>
-  <li><a href="/standards/architecture-decisions.html">Documenting architecture decisions</a></li>
-  <li><a href="/standards/threat-modelling.html">Threat modelling</a></li>
+  <li><%= link_to 'How to name software products', '/standards/naming-software-products.html' %></li>
+  <li><%= link_to 'Choosing a programming language', '/standards/programming-languages.html' %></li>
+  <li><%= link_to 'Style guides', '/manuals/style-guides.html' %></li>
+  <li><%= link_to 'How to manage third party software dependencies', '/standards/tracking-dependencies.html' %></li>
+  <li><%= link_to 'Building accessible services', '/manuals/accessibility.html' %></li>
+  <li><%= link_to 'Pair programming', '/standards/pair-programming.html' %></li>
+  <li><%= link_to 'Supporting different browsers', '/manuals/browser-support.html' %></li>
+  <li><%= link_to 'How to optimise frontend performance', '/standards/optimise-frontend-perf.html' %></li>
+  <li><%= link_to 'Documenting architecture decisions', '/standards/architecture-decisions.html' %></li>
+  <li><%= link_to 'Threat modelling', '/standards/threat-modelling.html' %></li>
 </ul>
