--- a/source/partials/_nav-version-control-deployments.html.erb
+++ b/source/partials/_nav-version-control-deployments.html.erb
@@ -1,10 +1,10 @@
 <ul>
-  <li><a href="/standards/source-code/index.html">How to store source code</a></li>
-  <li><a href="/standards/source-code/use-github.html">Use GitHub</a></li>
-  <li><a href="/standards/source-code/working-with-git.html">Working with git</a></li>
-  <li><a href="/standards/pull-requests.html">Using Pull Requests</a></li>
-  <li><a href="/manuals/readme-guidance.html">Writing READMEs</a></li>
-  <li><a href="/manuals/release-notes.html">Writing release notes</a></li>
-  <li><a href="/manuals/licensing.html">Licensing</a></li>
-  <li><a href="/standards/continuous-delivery.html">Use continuous delivery</a></li>
+  <li><%= link_to 'How to store source code', '/standards/source-code/index.html' %></li>
+  <li><%= link_to 'Use GitHub', '/standards/source-code/use-github.html' %></li>
+  <li><%= link_to 'Working with git', '/standards/source-code/working-with-git.html' %></li>
+  <li><%= link_to 'Using Pull Requests', '/standards/pull-requests.html' %></li>
+  <li><%= link_to 'Writing READMEs', '/manuals/readme-guidance.html' %></li>
+  <li><%= link_to 'Writing release notes', '/manuals/release-notes.html' %></li>
+  <li><%= link_to 'Licensing', '/manuals/licensing.html' %></li>
+  <li><%= link_to 'Use continuous delivery', '/standards/continuous-delivery.html' %></li>
 </ul>
