Correct nav link to SRE overview

--- a/source/partials/_nav-logging-monitoring-alerting.html.erb
+++ b/source/partials/_nav-logging-monitoring-alerting.html.erb
@@ -3,7 +3,7 @@
   <li><%= link_to 'How to monitor your service', '/standards/monitoring.html' %></li>
   <li><%= link_to 'How to manage alerts', '/standards/alerting.html' %></li>
   <li>
-    <a href="/standards/sre/overview.html">Following the Google SRE playbook</a>
+    <%= link_to 'Following the Google SRE playbook', '/standards/sre/overview.html' %>
     <%= partial '/partials/_nav-sre' %>
   </li>
 </ul>
