Remove Digital Marketplace example

--- a/source/standards/sre/slis.html.md.erb
+++ b/source/standards/sre/slis.html.md.erb
@@ -41,9 +41,8 @@ When you run the workshop:
 
 ### 1. Prioritise your most important user journeys
 
-People use your service to complete user journeys to achieve specific outcomes. Define your most important user journeys.
-
-For example, in [Digital MarketPlace](https://www.digitalmarketplace.service.gov.uk/) the most important user journey is where suppliers submit their bids. Your team will surface many user outcomes so prioritise 2 to 3 items to start with.
+People use your service to complete user journeys to achieve specific outcomes. Define your most important user journeys
+- your team will surface many user outcomes so prioritise 2 to 3 items to start with.
 
 ### 2. Map your user journeys
 
