Reintroduce contents list to index page
This commit removed the list of contents from the index page: 09715232a6fcb73ff475e9b0019ea0d66c36c955

But this breaks the skip links from the navigation, so restoring them for now until we find a nicer solution for the navigation.

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -107,3 +107,23 @@ we use to help us do this thing?
 ## The MHCLG Way Slack channel
 
 Use the MHCLG Way Slack channel (#mhclg-way) can be used to raise and discuss existing recommendations and guidance in this living document, and to suggest new topics to cover as the department's technology evolves.
+
+## Software development
+
+<%= partial 'partials/nav-software-development' %>
+
+## Version control and deployments
+
+<%= partial 'partials/nav-version-control-deployments' %>
+
+## Hosting and infrastructure
+
+<%= partial 'partials/nav-hosting-infrastructure' %>
+
+## Logging, monitoring and alerting
+
+<%= partial 'partials/nav-logging-monitoring-alerting' %>
+
+## Operating a service
+
+<%= partial 'partials/nav-operating-a-service' %>
