style-guides sidebar nav links are now relative
Previously, they were absolute, and referencing a path that is incorrect when deployed (/manuals/style-guides/[...], rather than /mhclg-way/manuals/style-guides/[...])

--- a/source/manuals/style-guides.html.md.erb
+++ b/source/manuals/style-guides.html.md.erb
@@ -9,11 +9,11 @@ review_in: 12 months
 <ul>
     <li><a href='#style-guides'>Style guides</a>
         <ul>
-            <li><a href="/manuals/style-guides/css.html">CSS/Sass</a></li>
-            <li><a href="/manuals/style-guides/docker.html">Docker</a></li>
-            <li><a href="/manuals/style-guides/html.html">HTML</a></li>
-            <li><a href="/manuals/style-guides/python.html">Python</a></li>
-            <li><a href="/manuals/style-guides/ruby.html">Ruby</a></li>
+            <li><a href="style-guides/css.html">CSS/Sass</a></li>
+            <li><a href="style-guides/docker.html">Docker</a></li>
+            <li><a href="style-guides/html.html">HTML</a></li>
+            <li><a href="style-guides/python.html">Python</a></li>
+            <li><a href="style-guides/ruby.html">Ruby</a></li>
         </ul>
     </li>
 </ul>
