--- a/source/manuals/style-guides.html.md.erb
+++ b/source/manuals/style-guides.html.md.erb
@@ -9,11 +9,11 @@ review_in: 12 months
 <ul>
     <li><a href='#style-guides'>Style guides</a>
         <ul>
-            <li><a href="style-guides/css.html">CSS/Sass</a></li>
-            <li><a href="style-guides/docker.html">Docker</a></li>
-            <li><a href="style-guides/html.html">HTML</a></li>
-            <li><a href="style-guides/python.html">Python</a></li>
-            <li><a href="style-guides/ruby.html">Ruby</a></li>
+            <li><%= link_to 'CSS/Sass', 'style-guides/css.html' %></li>
+            <li><%= link_to 'Docker', 'style-guides/docker.html' %></li>
+            <li><%= link_to 'HTML', 'style-guides/html.html' %></li>
+            <li><%= link_to 'Python', 'style-guides/python.html' %></li>
+            <li><%= link_to 'Ruby', 'style-guides/ruby.html' %></li>
         </ul>
     </li>
 </ul>
