Fix typo ’l -> ’re

--- a/source/standards/source-code/working-with-git.html.md.erb
+++ b/source/standards/source-code/working-with-git.html.md.erb
@@ -59,8 +59,8 @@ developers on your project. This includes:
   made
 
 Capturing context around a change allows people to understand why a particular
-implementation decision was made, much like an [architecture decision record](https://cognitect.com/blog/2011/11/15/documenting-architecture-decisions). We’l
-being kinder to our future selves.
+implementation decision was made, much like an [architecture decision record](https://cognitect.com/blog/2011/11/15/documenting-architecture-decisions).
+We’re being kinder to our future selves.
 
 #### Recommended blog posts on commit messages
 
