Revise joining process for 'communitiesuk' github org
Updated instructions for joining 'communitiesuk' to reflect new process with email address and slack channel.

--- a/source/standards/source-code/use-github.html.md.erb
+++ b/source/standards/source-code/use-github.html.md.erb
@@ -19,8 +19,10 @@ Accounts not connected to a valid email address will be removed from `communitie
 
 You must also set up two-factor authentication on your account.
 
-To join `communitiesuk` ask your tech lead or technical architect to invite you. Make sure you’ve connected your MHCLG
-email address to your account first, otherwise your account will be removed.
+To join `communitiesuk` first get approval from your delivery manager, tech lead or technical architect that this is required for your role.
+
+Next, either message `#help-github-admin` on Slack or email [GitHub.Admins@communities.gov.uk](mailto:GitHub.Admins@Communities.gov.uk) and an admin will action your request. Make sure you’ve [verified your MHCLG
+email address in your GitHub account](https://docs.github.com/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/adding-an-email-address-to-your-github-account) first, otherwise your account will be removed.
 
 ## Managing repositories
 
